# ml-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
ml_sandbox/: funky.py
mlsandbox/examples/: linear_regression.py
mlsandbox/models/: __init__.py  loss.py  regression.py
tests/: test_funky.py  test_ml_sandbox.py  test_regression.py
