[tool.poetry]
name = "mlsandbox"
version = "0.1.0"
description = "Implementing algorithms for fun :)"
authors = ["David Dai <davidwh.dai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.10b0"
mypy = "^0.910"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
include = ["mlsandbox"]
exclude = [
    "**/__pycache__"
]
venvPath = "."
venv = ".venv"
pythonversion = "3.8"
